Fit page into IQP site

--- a/docs/guides/execute-on-hardware.mdx
+++ b/docs/guides/execute-on-hardware.mdx
@@ -31,6 +31,7 @@ expectation values of observables corresponding to physical quantities or cost f
 * [PUBs and primitive results](./primitive-input-output)
 * [Primitives examples](./primitives-examples)
 * [Primitives with REST API](./primitives-rest-api)
+* [Noise learning helper](./noise-learning)
 
 ### Configure runtime options
 * [Overview](./runtime-options-overview)
