--- a/docs/guides/latest-updates.mdx
+++ b/docs/guides/latest-updates.mdx
@@ -20,7 +20,7 @@ Keep up with the latest and greatest from Qiskit and IBM Quantum&trade;! Gathere
 
 Qiskit 1.2 (stable release) is now available on [PyPI](https://pypi.org/project/qiskit/1.2.0/) and [GitHub](https://github.com/Qiskit/qiskit/releases/tag/1.2.0). Thanks to the whole dev team and all external contributors!
 
-- **Tons of performance improvements** :rocket: Many of the core structures have been moved to Rust, allowing for significant speedups mostly in the construction, manipulation (including copy and parameter assignment), and synthesis of circuits.
+- Many of the core structures have been moved to Rust, allowing for significant speedups mostly in the construction, manipulation (including copy and parameter assignment), and synthesis of circuits.
 - **Better compiler quality** due to the addition of unitary peephole optimization (for optimization levels 2 and 3) and improvements in Sabre.
 - **[`generate_preset_pass_manager`](/api/qiskit/transpiler_preset#generate_preset_pass_manager) importance highlight**, which is now importable from the top level.
 
