--- a/docs/guides/serverless.mdx
+++ b/docs/guides/serverless.mdx
@@ -29,7 +29,7 @@ To use Qiskit Serverless on IBM Quantum Platform, install the `qiskit-serverless
 pip install qiskit-serverless
 ```
 
-This package requires `python` 3.11+. For users and organizations who want to run Serverless on custom infrastructure, follow the [deploy Qiskit Serverless on custom cloud resources guide](https://qiskit.github.io/qiskit-serverless/cloud.html).
+This package requires `python` 3.11+. For users and organizations who want to run Serverless on custom infrastructure, follow the [Cloud infrastructure setup](https://qiskit.github.io/qiskit-serverless/cloud.html) guide.
 
 ## Next steps
 
