--- a/docs/guides/serverless.mdx
+++ b/docs/guides/serverless.mdx
@@ -7,7 +7,7 @@ description: Use Qiskit Serverless to run quantum-classical workloads across the
 
 Qiskit Serverless provides a simple interface to run workloads across quantum-classical resources. This includes deploying programs to the IBM Quantum&trade; Platform, running workloads remotely, and easy resource management for multi-cloud and quantum-centric supercomputing use cases.
 
-Premium users can build, deploy, and run their workloads remotely on classical compute made available through the IBM Quantum Platform. Try out the tutorials in [IBM Quantum Learning](https://learning.quantum.ibm.com/catalog/tutorials?topics=qiskit-patterns) (note: these are accessible in the Premium Plan once you have logged into your IBM Quantum account).
+Premium users can build, deploy, and run their workloads remotely on classical compute made available through IBM Quantum Platform. Try out the tutorials in [IBM Quantum Learning](https://learning.quantum.ibm.com/catalog/tutorials?topics=qiskit-patterns) (note: these are accessible in the Premium Plan once you have logged into your IBM Quantum account).
 
 <Admonition type="note">
     This preview feature is under frequent development, subject to change.
@@ -18,7 +18,7 @@ Premium users can build, deploy, and run their workloads remotely on classical c
 Qiskit Serverless helps manage classical and quantum resources across the entire Qiskit pattern workflow. This includes some of the following examples:
 
 - Parallelizing classical tasks, such as pre-processing and post-processing
-- Persisting long running workloads in the cloud, even if your laptop is turned off
+- Persisting long-running workloads in the cloud, even if your laptop is turned off
 - Deploying reusable programs
 
 ## Install Qiskit Serverless
