save_account() mention

--- a/docs/guides/serverless-first-program.ipynb
+++ b/docs/guides/serverless-first-program.ipynb
@@ -138,22 +138,24 @@
    "source": [
     "## Deploy to IBM Quantum Platform\n",
     "\n",
-    "Authenticate to the `IBMServerlessClient` with your API token, which you can find in your [IBM Quantum account](https://quantum.ibm.com/account), and upload the program."
+    "Authenticate to the `IBMServerlessClient` with your API token, which you can find in your [IBM Quantum account](https://quantum.ibm.com/account), and upload the program.\n",
+    "\n",
+    "You can use `save_account()` to save your credentials (See the \"Authenticate to the service\" step in the [Set up to use IBM Quantum Platform](./setup-channel#set-up-to-use-ibm-quantum-platform) section). Note that this writes your credentials to the same file as [`QiskitRuntimeService.save_account()`](/api/qiskit-ibm-runtime/qiskit_ibm_runtime.QiskitRuntimeService#save_account)."
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 2,
+   "cell_type": "markdown",
    "id": "edcc7903-6a3d-4316-9bed-5dffe5628a5e",
    "metadata": {},
-   "outputs": [],
    "source": [
+    "```python\n",
     "from qiskit_serverless import IBMServerlessClient, QiskitFunction\n",
     "\n",
     "# Authenticate to the remote cluster and submit the pattern for remote execution\n",
     "serverless = IBMServerlessClient(\n",
     "    token=API_TOKEN\n",
-    ")"
+    ")\n",
+    "```"
    ]
   },
   {
