--- a/docs/guides/serverless-run-first-workload.ipynb
+++ b/docs/guides/serverless-run-first-workload.ipynb
@@ -9,22 +9,7 @@
     "\n",
     "This section explores how to list programs available in Serverless, pass inputs into these programs, run them remotely, check their status, and retrieve results and logs.\n",
     "\n",
-    "First, authenticate to Qiskit Serverless with your [IBM Quantum account](https://quantum.ibm.com/account)."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 2,
-   "id": "5f5c3a63-4824-4c65-8519-1ec0f77b02a9",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "from qiskit_serverless import IBMServerlessClient\n",
-    "\n",
-    "# Authenticate to the remote cluster and submit the pattern for remote execution\n",
-    "serverless = IBMServerlessClient(\n",
-    "    token=API_TOKEN\n",
-    ")"
+    "Be sure you have authenticated to Qiskit Serverless with your [IBM Quantum account](https://quantum.ibm.com/account) (see [Deploy to IBM Quantum Platform](./serverless-first-program#deploy-to-ibm-quantum-platform) for instructions)."
    ]
   },
   {
@@ -128,7 +113,7 @@
    "id": "6a6ba35b-b98b-41b1-8dd4-c7cf2fc8b637",
    "metadata": {},
    "source": [
-    "Finally, set your optimization level:"
+    "Set your optimization level:"
    ]
   },
   {
