--- a/docs/guides/serverless-run-first-workload.ipynb
+++ b/docs/guides/serverless-run-first-workload.ipynb
@@ -87,25 +87,17 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 5,
+   "cell_type": "markdown",
    "id": "ebefb5ac-c8a8-4350-b16f-0677f0e412e5",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "ibm_torino\n"
-     ]
-    }
-   ],
    "source": [
+    "```python\n",
     "from qiskit_ibm_runtime import QiskitRuntimeService\n",
     "\n",
     "service = QiskitRuntimeService(channel='ibm_quantum', token=API_TOKEN)\n",
     "backend = service.least_busy(operational=True, simulator=False)\n",
-    "print(backend.name)"
+    "print(backend.name)\n",
+    "```"
    ]
   },
   {
@@ -196,7 +188,7 @@
     "\n",
     "With your Qiskit Serverless `job_id`, you can check the status of running jobs. This includes the following statuses:\n",
     "\n",
-    "- **`QUEUED`**: The remote program is in the Qiskit Serverless queue. This is currently based on how much you've used Qiskit Serverless\n",
+    "- **`QUEUED`**: The remote program is in the Qiskit Serverless queue. The queue priority is currently based on how much you've used Qiskit Serverless\n",
     "- **`INITIALIZING`**: The remote program is starting; this includes setting up the remote environment and installing dependencies\n",
     "- **`RUNNING`**: The program is running. At this stage, if you have `print()` outputs in your program, you should be able to retrieve logs using `job.logs()`\n",
     "- **`DONE`**: The program is complete, and you can retrieve data stored in `save_result()` with `job.results()`"
