--- a/docs/guides/serverless-manage-resources.ipynb
+++ b/docs/guides/serverless-manage-resources.ipynb
@@ -7,7 +7,7 @@
    "source": [
     "# Manage Qiskit Serverless compute and data resources\n",
     "\n",
-    "Qiskit Serverless allows you to manage compute and data across your Qiskit pattern, including CPUs, QPUs, and other compute accelerators.\n",
+    "Qiskit Serverless allows you to manage compute and data across your [Qiskit pattern](./intro-to-patterns), including CPUs, QPUs, and other compute accelerators.\n",
     "\n",
     "## Parallel workflows"
    ]
@@ -94,11 +94,11 @@
    "source": [
     "### Explore different task configurations\n",
     "\n",
-    "You can flexibly allocate CPU, GPU, and memory for your tasks via `@distribute_task()`. For Qiskit Serverless on IBM Quantum Platform, each program is equipped with 16 CPU cores and 32 GB RAM, which can be allocated dynamically as needed.\n",
+    "You can flexibly allocate CPU, GPU, and memory for your tasks via `@distribute_task()`. For Qiskit Serverless on IBM Quantum&trade; Platform, each program is equipped with 16 CPU cores and 32 GB RAM, which can be allocated dynamically as needed.\n",
     "\n",
     "CPU cores can be allocated as full CPU cores, or even fractional allocations, as shown in the following.\n",
     "\n",
-    "Memory is allocated as number of bytes. Recall that there are 1024 bytes in a kilobyte, 1024 kilobytes in a megabyte, and 1024 megabytes in a gigabyte. To allocate 2 GB of memory for your worker, you need to allocate `\"mem\": 2 * 1024 * 1024 * 1024`"
+    "Memory is allocated in number of bytes. Recall that there are 1024 bytes in a kilobyte, 1024 kilobytes in a megabyte, and 1024 megabytes in a gigabyte. To allocate 2 GB of memory for your worker, you need to allocate `\"mem\": 2 * 1024 * 1024 * 1024`"
    ]
   },
   {
@@ -129,16 +129,15 @@
     "\n",
     "For each `IBMQPUSelector`, the context is set in the constructor. All `IBMQPUSelectors` require Qiskit Runtime credentials. The `IBMLeastNoisyQPUSelector` requires a circuit and transpile options specifying how the circuit should be optimized for each QPU, to determine the most optimal QPU and qubit layout.\n",
     "\n",
-    "All `IBMQPUSelectors` implement a `get_backend` method, which retrieves the optimal QPU with respect to the given context. The `get_backend` method also allows for additional filtering of the QPUs. It is implemented using the same interface as the [QiskitRuntimeService.backends method](/api/qiskit-ibm-runtime/qiskit_ibm_runtime.QiskitRuntimeService#backends)."
+    "All `IBMQPUSelectors` implement a `get_backend` method, which retrieves the optimal QPU with respect to the given context. The `get_backend` method also allows for additional filtering of the QPUs. It is implemented using the same interface as the [QiskitRuntimeService.backends](/api/qiskit-ibm-runtime/qiskit_ibm_runtime.QiskitRuntimeService#backends) method."
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "id": "b9b38d02-1c4b-4598-abc8-f2ff2f3c1d23",
    "metadata": {},
-   "outputs": [],
    "source": [
+    "```python\n",
     "# source_files/transpile_parallel.py\n",
     "\n",
     "from qiskit_ibm_runtime import QiskitRuntimeService\n",
@@ -155,7 +154,8 @@
     "    service, circuit=abstract_circuit, transpile_options={\"optimization_level\": 3}\n",
     ")\n",
     "backend = selector.get_backend(min_num_qubits=127)\n",
-    "target_circuit = selector.optimized_circuit"
+    "target_circuit = selector.optimized_circuit\n",
+    "```"
    ]
   },
   {
@@ -195,22 +195,7 @@
     "- Only `tar` and `h5` files are supported today\n",
     "- This is only a flat `/data` storage, and cannot have `/data/folder/` subdirectories\n",
     "\n",
-    "The following shows how to upload files:"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 5,
-   "id": "484766e7-01d7-4ed2-b376-ed78f6055f6a",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "from qiskit_serverless import IBMServerlessClient\n",
-    "\n",
-    "# Authenticate to the remote cluster and submit the pattern for remote execution\n",
-    "serverless = IBMServerlessClient(\n",
-    "    token=API_TOKEN\n",
-    ")"
+    "The following shows how to upload files. Be sure you have authenticated to Qiskit Serverless with your [IBM Quantum account](https://quantum.ibm.com/account) (see [Deploy to IBM Quantum Platform](./serverless-first-program#deploy-to-ibm-quantum-platform) for instructions)."
    ]
   },
   {
@@ -248,7 +233,7 @@
    "id": "4f762470-945f-48d5-a65b-c60d3b2dae3f",
    "metadata": {},
    "source": [
-    "Next, you can list all the files in our `data` directory. This data is accessible to all programs."
+    "Next, you can list all the files in your `data` directory. This data is accessible to all programs."
    ]
   },
   {
