--- a/docs/guides/serverless-run-first-workload.ipynb
+++ b/docs/guides/serverless-run-first-workload.ipynb
@@ -23,24 +23,13 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 3,
+   "cell_type": "markdown",
    "id": "4eaad0dc-9b42-48fa-ad08-4e0f9c4d90bc",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "[QiskitFunction(transpile_remote_serverless)]"
-      ]
-     },
-     "execution_count": 3,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
    "source": [
-    "serverless.list()"
+    "```python\n",
+    "serverless.list()\n",
+    "```"
    ]
   },
   {
