--- a/docs/guides/serverless-run-first-workload.ipynb
+++ b/docs/guides/serverless-run-first-workload.ipynb
@@ -116,13 +116,13 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 7,
+   "cell_type": "markdown",
    "id": "e9b7e7c1-07b1-4777-bb08-1522433901c6",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "transpile_remote_serverless = serverless.get('transpile_remote_serverless')"
+    "```python\n",
+    "transpile_remote_serverless = serverless.get('transpile_remote_serverless')\n",
+    "```"
    ]
   },
   {
