--- a/docs/guides/latest-updates.mdx
+++ b/docs/guides/latest-updates.mdx
@@ -27,7 +27,7 @@ Qiskit 1.2 (stable release) is now available on [PyPI](https://pypi.org/project/
 Important deprecations:
 - Primitive V1 reference implementations (like `qiskit.primitives.Estimator`) and tooling are deprecated in favor of V2 Primitives. The Primitive V1 base classes remain available.
 - Backend V1 is now deprecated in favor of [`BackendV2`](/api/qiskit/qiskit.providers.BackendV2), including the deprecation of `Qobj`, `assemble`, and other scaffolding related to the old V1.
-- Support for Python 3.8 will be dropped in the next release, 1.3. Python 3.9 will then be the new minimal required version.
+- Support for Python 3.8 will be dropped in the next release, v1.3. Python 3.9 will then be the new minimal required version.
 
 Remember, because this a minor release, it will not introduce breaking changes for users moving from Qiskit SDK v1.0. Any deprecations announced with this release refer only to things that will now start throwing deprecation warnings. None of these will be removed until the release of Qiskit v2.0, pursuant to Qiskit’s official [deprecation policy](https://github.com/Qiskit/qiskit/blob/main/DEPRECATION.md#).
 
