Apply suggestions from code review
Co-authored-by: Samuele Ferracin <sam.ferracin@ibm.com>

--- a/docs/guides/noise-learning.ipynb
+++ b/docs/guides/noise-learning.ipynb
@@ -7,7 +7,7 @@
    "source": [
     "# Noise learning helper\n",
     "\n",
-    "The error mitigation techniques [TREX](./error-mitigation-and-suppression-techniques#twirled-readout-error-extinction-trex) and [PEC](./error-mitigation-and-suppression-techniques#probabilistic-error-cancellation-pec) both utilize a noise learning component based on a [Pauli-Lindblad noise model](https://www.nature.com/articles/s41567-023-02042-2) which is typically managed during execution after submitting one or more jobs through `qiskit-ibm-runtime`. However, as of `qiskit-ibm-runtime` 0.27.1 and later, a [`NoiseLearner`](../api/qiskit-ibm-runtime/noise_learner) and a `NoiseLearnerOptions` class for executing and storing the results of these noise learning experiments now exists. This page provides an overview of its usage and the associated options available.\n",
+    "The error mitigation techniques [PEA](./error-mitigation-and-suppression-techniques#probabilistic-error-amplification-pea) and [PEC](./error-mitigation-and-suppression-techniques#probabilistic-error-cancellation-pec) both utilize a noise learning component based on a [Pauli-Lindblad noise model](https://www.nature.com/articles/s41567-023-02042-2), which is typically managed during execution after submitting one or more jobs through `qiskit-ibm-runtime`. However, versions of `qiskit-ibm-runtime` 0.27.1 and later include a [`NoiseLearner`](../api/qiskit-ibm-runtime/noise_learner) and a `NoiseLearnerOptions` class for executing and storing the results of these noise learning experiments. This page provides an overview of its usage and the associated options available.\n",
     "\n",
     "\n",
     "\n",
@@ -58,7 +58,7 @@
    "id": "1859540c-a597-411a-ab98-1b436b284f8a",
    "metadata": {},
    "source": [
-    "The `NoiseLearnerResult.data` is a list of `LayerError` objects containing the noise model for each of the entangling layers chosen to characterize (the maximum number of the layers to learn can be specified in the `NoiseLearnerOptions`). These come in the form of one or more `LayerError` data containers which store the circuit, qubits, and `PauliLindBladError` for each layer of the noise model that was learned."
+    "The `NoiseLearnerResult.data` is a list of `LayerError` objects containing the noise model for each individual entangling layer that belongs to the target circuit(s). Each `LayerError` stores the layer information, in the form of a circuit and a set of qubit labels, alongside the `PauliLindBladError` for the noise model that was learned for the given layer."
    ]
   },
   {
@@ -152,7 +152,6 @@
     "# Transpile the circuit for execution\n",
     "pm = generate_preset_pass_manager(backend=backend, optimization_level=3)\n",
     "circuit_to_run = pm.run(circuit_to_learn)\n",
-    "\n",
     "\n",
     "# Instantiate a noise learner options object\n",
     "learner_options = NoiseLearnerOptions(\n",
