--- a/docs/guides/serverless-first-program.ipynb
+++ b/docs/guides/serverless-first-program.ipynb
@@ -113,12 +113,11 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "id": "2cb9b713-c451-44e0-9324-7c98d01100a5",
    "metadata": {},
-   "outputs": [],
    "source": [
+    "```python\n",
     "# /source_files/transpile_remote.py\n",
     "\n",
     "results = [\n",
@@ -128,7 +127,8 @@
     "\n",
     "save_result({\n",
     "    \"transpiled_circuits\": results\n",
-    "})"
+    "})\n",
+    "```"
    ]
   },
   {
