--- a/docs/guides/serverless-manage-resources.ipynb
+++ b/docs/guides/serverless-manage-resources.ipynb
@@ -52,16 +52,16 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "id": "74fdcd4a-01cd-46ca-aa24-2a8a3605346f",
    "metadata": {},
-   "outputs": [],
    "source": [
+    "```python\n",
     "from qiskit_serverless import get\n",
     "\n",
     "transpile_worker_reference = transpile_remote(circuit, optimization_level, backend)\n",
-    "result = get(transpile_worker_reference)"
+    "result = get(transpile_worker_reference)\n",
+    "```"
    ]
   },
   {
@@ -73,18 +73,18 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "id": "ac99b4a0-4a42-4c43-869d-265344b70359",
    "metadata": {},
-   "outputs": [],
    "source": [
+    "```python\n",
     "transpile_worker_references = [\n",
     "    transpile_remote(circuit, optimization_level, backend)\n",
     "    for circuit in circuit_list\n",
     "]\n",
     "\n",
-    "results = get(transpile_worker_references)"
+    "results = get(transpile_worker_references)\n",
+    "```"
    ]
   },
   {
