--- a/docs/guides/serverless-run-first-workload.ipynb
+++ b/docs/guides/serverless-run-first-workload.ipynb
@@ -134,17 +134,17 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 8,
+   "cell_type": "markdown",
    "id": "85b1aace-e7d7-4e2e-bb77-44fb514d0236",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "job = transpile_remote_serverless.run(\n",
+    "```python\n",
+    "    job = transpile_remote_serverless.run(\n",
     "    circuits=qc_random,\n",
     "    backend=backend.name,\n",
     "    optimization_level=optimization_level\n",
-    ")"
+    ")\n",
+    "```"
    ]
   },
   {
