--- a/docs/guides/monitor-job.mdx
+++ b/docs/guides/monitor-job.mdx
@@ -28,7 +28,7 @@ Use the job instance to check the job status or retrieve the results by calling 
 Call `service.job(\<job\_id>)` to retrieve a job you previously submitted. If you don’t have the job ID, or if you want to retrieve multiple jobs at once; including jobs from retired QPUs (quantum processing units), call `service.jobs()` with optional filters instead. See [QiskitRuntimeService.jobs](../api/qiskit-ibm-runtime/qiskit_ibm_runtime.QiskitRuntimeService#jobs).
 
 <Admonition type="note">
-  service.jobs() returns only Qiskit Runtime jobs. To retrieve other jobs, use [qiskit-ibm-provider](../api/qiskit-ibm-provider/qiskit_ibm_provider.IBMBackend#ibmbackend) instead.
+  service.jobs() returns only Qiskit Runtime jobs. To retrieve jobs run from IBM Provider (deprecated), use [qiskit-ibm-provider](../api/qiskit-ibm-provider/qiskit_ibm_provider.IBMBackend#ibmbackend) instead.  See [Migrate from qiskit_ibm_provider](/migration-guides/qiskit-runtime-from-ibm-provider) for instructions to migrate.
 </Admonition>
 
 ### Example
@@ -55,5 +55,5 @@ In Qiskit, use `job.cancel()` to cancel a job.
 
 <Admonition type="tip" title="Recommendations">
     - Try the [Grover's algorithm](https://learning.quantum.ibm.com/tutorial/grovers-algorithm) tutorial.
-    - View the [`job_monitor` documentation](/api/qiskit-ibm-provider/qiskit_ibm_provider.job.job_monitor) in the Qiskit IBM Provider API reference.
+    - [Migrate from qiskit_ibm_provider](/migration-guides/qiskit-runtime-from-ibm-provider)
 </Admonition>
