Add link to migration guide

--- a/docs/guides/retired-qpus.mdx
+++ b/docs/guides/retired-qpus.mdx
@@ -74,6 +74,10 @@ To retrieve jobs from a retired QPU, you can use code similar to this, depending
 
 ### For a job run from IBM Provider
 
+<Admonition type="note">
+IBM Provider has been deprecated. See [Migrate from qiskit_ibm_provider](/migration-guides/qiskit-runtime-from-ibm-provider) for instructions to migrate.
+</Admonition>
+
 ```python
 from qiskit_ibm_provider import IBMProvider
 
