--- a/docs/guides/execution-modes.mdx
+++ b/docs/guides/execution-modes.mdx
@@ -41,7 +41,7 @@ The above are general guidelines, and you should tune your workload to find the 
 
 ## Sessions versus batch usage
 
-Usage is a measurement of the amount of time the QPU is locked for your workload. It is important to understand how usage is calculated because it impacts how much you are charged for jobs (including failed jobs).
+The reported usage is the time a QPU is locked for your workload, including jobs that failed.
 
 * Session usage is the time from when the first job starts until the session goes inactive, is closed, or when its last job completes, whichever happens **last**.
 * Batch usage is the amount of time all jobs spend on the QPU.
@@ -56,8 +56,8 @@ If you are calling the REST API directly, the usage time is the `elapsed_time` v
 <span id="failed-job"></span>
 ## Failed and canceled jobs
 
-When a job is failed or canceled, you are charged for usage as follows:
+When a job is failed or canceled, the reported usage is as follows:
 
-* Job or batch mode: you are charged for all the time the QPU was locked for the execution, regardless of cancellations and errors. So if the error occurs before the lock, you are charged nothing. If the error/cancellation occurs after the system lock, you are charged based on the value that   Qiskit Runtime returns as `consumed`. Thus, some failed jobs have no cost and others do.
+* Job or batch mode: the reported usage is the time the QPU was locked for executing your workload until the time it failed or was canceled. Therefore, if the workload had not locked the QPU by the time of failure, the reported usage is zero. Otherwise, the workload's reported usage is the value that Qiskit Runtime returns as `consumed`.
 
-* Session mode: You are charged all the wall-clock time from the first job execution until the session goes inactive or is closed, regardless of numbers of jobs, cancellations, or errors.
+* Session mode: the reported usage is the wall-clock time from the when the first job started executing in the session until the session terminates, regardless of the number of jobs that fail or are cancelled.
