Append to file rather then overwrite

--- a/docs/guides/serverless-first-program.ipynb
+++ b/docs/guides/serverless-first-program.ipynb
@@ -111,7 +111,7 @@
     }
    ],
    "source": [
-    "%%writefile ./source_files/transpile_remote.py\n",
+    "%%writefile --append ./source_files/transpile_remote.py\n",
     "\n",
     "from qiskit_serverless import get_arguments, save_result, distribute_task, get\n",
     "\n",
@@ -144,7 +144,7 @@
     }
    ],
    "source": [
-    "%%writefile ./source_files/transpile_remote.py\n",
+    "%%writefile --append ./source_files/transpile_remote.py\n",
     "\n",
     "from qiskit_ibm_runtime import QiskitRuntimeService\n",
     "\n",
@@ -174,7 +174,7 @@
     }
    ],
    "source": [
-    "%%writefile ./source_files/transpile_remote.py\n",
+    "%%writefile --append ./source_files/transpile_remote.py\n",
     "\n",
     "results = [\n",
     "    transpile_remote(circuit, backend)\n",
