--- a/docs/guides/execution-modes-faq.mdx
+++ b/docs/guides/execution-modes-faq.mdx
@@ -21,6 +21,13 @@ Local testing mode supports the syntax for the different execution modes, but be
 The number of jobs running in parallel is based on the degree of parallelism configured for the backend, which is five for most backends today.
 </details>
 
+<details>
+  <summary>
+    How is usage reported for failed or canceled jobs?
+  </summary>
+
+See the [Failed and canceled jobs](execution-modes#failed-job) section on the Execution modes page.
+</details>
 
 ## Sessions
 
