--- a/docs/guides/fair-share-scheduler.mdx
+++ b/docs/guides/fair-share-scheduler.mdx
@@ -16,7 +16,7 @@ When you submit a job to a quantum processing unit (QPU), it enters the schedule
 *   **Group:** A mid-level structure to which access allocation can be allocated by the hub for one or more collections of users (projects).
 *   **Project:** The base-level construct to which time are allocated from the overarching group, and to which users are directly assigned.
 *   **Scheduling window:** The fair-share scheduler accounts for usage over a rolling time window. Only execution time accumulated within that window is accounted for the purpose of fairness. The length of that window is currently 28 days. When the fair-share scheduler is invoked, it takes into account usage starting 28 days ago.
-*   **Time used:** For every group and project, during the scheduling window, we account for all usage on all the QPUs of the IBM Quantum Premium Plan. These include all successful jobs, as well as jobs returning known select errors.
+*   **Time used:** For every group and project, during the scheduling window, we account for all usage on all the QPUs of the IBM Quantum Premium Plan. These include all successful jobs, as well as jobs returning known select error codes.
 
 ## Allocation and administration
 
