--- a/docs/guides/instances.mdx
+++ b/docs/guides/instances.mdx
@@ -50,7 +50,7 @@ Those using the Open Plan instance have up to 10 minutes total of quantum time p
 <span id="connect-instance"></span>
 ## Connect to an instance
 
-You can specify an instance when initializing the service or provider, or when choosing a QPU.  You can copy the service-level code by clicking the three dots by the instance name on the Instances section of the [Account overview page](https://quantum.ibm.com/account).
+You can specify an instance when initializing the service, or when choosing a QPU.  You can copy the service-level code by clicking the three dots by the instance name on the Instances section of the [Account overview page](https://quantum.ibm.com/account).
 
 ```python
 
