--- a/docs/guides/instances.mdx
+++ b/docs/guides/instances.mdx
@@ -50,9 +50,7 @@ Those using the Open Plan instance have up to 10 minutes total of quantum time p
 <span id="connect-instance"></span>
 ## Connect to an instance
 
-You can specify an instance when initializing the service or provider, or when choosing a QPU.  You can copy the service-level code by clicking the three dots by the instance name on the Instances section of the [Account overview page](https://quantum.ibm.com/account).
-
-### qiskit-ibm-runtime
+You can specify an instance when initializing the service, or when choosing a QPU.  You can copy the service-level code by clicking the three dots by the instance name on the Instances section of the [Account overview page](https://quantum.ibm.com/account).
 
 ```python
 
@@ -69,19 +67,6 @@ backend2 = service.backend("ibmq_manila", instance="hub2/group2/project2")
 
 sampler1 = SamplerV2(mode=backend1)    # this will use hub1/group1/project1
 sampler2 = SamplerV2(mode=backend2)    # this will use hub2/group2/project2
-```
-
-### qiskit-ibm-provider
-
-```python
-from qiskit_ibm_provider import IBMProvider
-
-provider = IBMProvider(instance="hub1/group1/project1")
-backend1 = provider.get_backend("ibmq_manila")
-backend2 = provider.get_backend("ibmq_manila", instance="hub2/group2/project2")
-
-job1 = backend1.run(...)    # this will use hub1/group1/project1
-job2 = backend2.run(...)    # this will use hub2/group2/project2
 ```
 
 <Admonition type="note">
@@ -103,6 +88,5 @@ To leave an instance, visit the instance list on your [Account page.](https://qu
 
 <Admonition type="tip" title="Recommendations">
     - Try the [Grover's algorithm](https://learning.quantum.ibm.com/tutorial/grovers-algorithm) tutorial.
-    - Review the [IBMProvider instances method](/api/qiskit-ibm-provider/qiskit_ibm_provider.IBMProvider#instances) reference.
     - Review the [QiskitRuntimeService instances method](/api/qiskit-ibm-runtime/qiskit_ibm_runtime.QiskitRuntimeService#instances) reference.
 </Admonition>
